fixed overflow issues

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -3,7 +3,6 @@ $lt-font: 200;
 $med-font: 400;
 
 $row-width: 100%;
-
 h1 {
   font-size: 46px;
   font-weight: $lt-font;
@@ -40,6 +39,7 @@ section {
 article.about {
   @include grid-row;
   background: $blue;
+  overflow-x: hidden;
   &:before {
    display: block;
    height: 0;
@@ -61,13 +61,16 @@ article.about {
 }
 article.services {
   @include grid-row;
-  &:after {
-   display: block;
-   border-bottom: 100px solid $red;
-   border-left: 100vw solid transparent;
-  }
 }
 article.contact {
   @include grid-row;
   background: $red;
+  overflow-x: hidden;
+  &:before {
+   display: block;
+   height: 0;
+   width: 0;
+   border-top: 100px solid $white;
+   border-right: 100vmax solid transparent;
+  }
 }
